testdata/baselines/reference/conformance/typedefModuleExportsIndirect3.errors.txt
typedefModuleExportsIndirect3.js(3,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.


==== typedefModuleExportsIndirect3.js (1 errors) ====
    /** @typedef {{ a: 1, m: 1 }} C */
    const o = {};
    module.exports = o;
    ~~~~~~~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
==== use.js (0 errors) ====
    /** @typedef {import('./typedefModuleExportsIndirect3').C} C */
    /** @type {C} */
    var c
    